# findmy-traccar-bridge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-container.yml
findmy_traccar_bridge/: bridge.py  db_handling.py  debug_utils.py  device_utilities.py  endpoint_utilities.py  time.py
testing/: compose.yml
tests/: test_main_loop.py
