[project]
name = "findmy-traccar-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "findmy==0.9.8",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "ruff>=0.9.2",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
findmy-traccar-bridge = "findmy_traccar_bridge.bridge:cli_bridge"
findmy-traccar-bridge-init = "findmy_traccar_bridge.bridge:cli_init"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff.lint]
select = [
    # ruff default
    "E4", "E7", "E9", "F",
    # custom
    "I",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.2",
]
